--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% block content %}
+
+
     {% for post in posts %}
         <p>{{ post.a }}</p>
     {% endfor %}
